add a new story

--- a/writing.html
+++ b/writing.html
@@ -71,6 +71,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
           <li category="creative"><a href="#the-showdown">The Showdown - August 26, 2017</a></li>
           <li category="creative"><a href="#when-different-isnt-so">When Different Isn't So - August 27, 2017</a></li>
           <li category="creative"><a href="#shaky-hands">Shaky Hands - August 28, 2017</a></li>
+          <li category="creative"><a href="#its-a-job">It's a Job - August 29, 2017</a></li>
         </ul>
       </div>
 
@@ -90,6 +91,28 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
         <p class="storyEnd">𓏈</p>
       </div>
       -->
+
+      <div class="titleWrapper" category="creative">
+        <a class="imgLink" href="#its-a-job"><img class="link" src="./graphics/icons/link.png"></a>
+        <p class="title" id="its-a-job">It's a Job</p>
+        <a href="/writing" class="linkBack">top&nbsp;^</a>
+      </div>
+
+      <div class="article">
+        <p>
+          Cut, press, fold, place, next. A mantra, of sorts. Maybe for an hour at a time, you could keep that going in your head, in a loop. Maybe add a little melody to it, some rhythm. Cut, press, fold, place, next. Cut, press, fold, place, next. Yeah, you could get used to it, with a numb-enough mind. Every so often you’d wake up though, that’s kinda inevitable. Come to the realization that your life sucks, at least in this moment. But it’s so hard to think of anything else when you’re so beaten by your current situation. Whatever happened to the good old days? Well actually that trap never got me. You see, when I was a little kid, I made a connection. People always talked about the good old days, enjoying youth. I was always so confused. These were the best years of my life? No way. Life can’t be that terrible. Humanity never would have lasted if this was the peak of human joy. But as I grew up, I started having those feelings too. Ahh, remember the good old days? Yeah actually, I do. They sucked just as bad, if not worse. And yet, nostalgia still grips me. I’m convinced I was somehow happier, more innocent back then. Despite clear memories I have from that time, considering what about these old days made them good. It’s a strange position to be in. I almost wish I hadn’t worried so much about it as a kid. Then maybe I’d be able to fool myself into thinking there’s some attainable happiness, if only I can regain some part of my youth. Cut, press, fold, place, next. What would younger me have done, had he known about that? Come up with hundreds of fun little variations. CUT, two, three, press-fold PLACE, three, four, Next! Nah, I can’t see it. Younger me would have just spend all his time bemoaning the fact that his future was so bleak. Besides, I would have just tired myself of those variations before I even got to the point in life where I needed them.
+        </p>
+
+        <p>
+          Cut, press, fold, place, next. How long has it been? Five hours, including fifteen minutes for lunch. Well I’m more than halfway there, at least. But it is only Tuesday, so I’m not quite halfway done with the week. Halfway done with my life? No, not by a long shot. Oh god, is this really what I’ll be doing my whole life. Maybe one day they’ll get a machine to do this for me. Sure, I’ll be out of a job, but starving on the streets might not be so bad as this. At least I wouldn’t have to suffer through it for as long. Eh, maybe that’s a bit morbid. Then again, maybe that’s a sign of how unhealthy this place is for me. I joke about my own death because that actually lightens the mood. Cut, press, fold, place, next. Or maybe it’s just to have something to break up the monotony. Who knows, who cares. I was never much one for philosophy, and that question seems awfully close to something philosophical. But then again, maybe every question has its roots in philosophy. I mean isn’t that one of the big questions “why do we ask questions”. Ugh, this place has me so down I’m becoming an amateur philosopher. That machine can’t come soon enough.
+        </p>
+
+        <p>
+          Cut, press, fold-... stop. Day’s over. Place. No next, but I still say it. After years, it’s become something of a compulsion. Whenever I hear the word “cut” in conversation, or if I read it, though I honestly don’t read all that much, my mind goes straight back to that cursed mantra. I even mouth the words sometimes. Pressfoldplacenext. People think I’m weird for it, but they usually forget about it pretty quickly. Really they forget about me pretty quickly. I’m not very memorable. Don’t feel bad for me though, I try not to be. I have no real interest in making friends, or second conversations. I just want to be alone most of the time. It’s so relaxing, spending time with yourself. Just sitting there, in my big comfy chair. Sipping a nice cup of tea. Or vodka, depending on the mood. I have a fireplace. That was one thing I couldn’t do without, when looking for a place to live. I needed a fire to sit by, stare into it. A live fire is so beautiful, so calming. Mesmerizing. You can really forget about everything else when you stare into its flickering incandescence. Sparks pop up, fall down. Sometimes they land near you, giving off a small, hopeless glow before wearing themselves out and finishing their lives as ash. Sometimes they are taken right back up by the fire proper, reinvigorated, fed by the energy of what may as well be its god, then flung right back out by the turbulence created by the ravenous consumption of that god. Sometimes I wish I could be like those sparks. So full of life and energy. And passion. Flying about, not knowing where they’ll land. Not knowing if this will be their last flight, their longest and best. Ending up far from home, but not really minding. Knowing that it was all worth it, that everyone dies eventually so you may as well take it as it comes, not worry too much about it until then. Sure, they may die young. But what’s the point of growing old if each day is the same?
+        </p>
+
+        <p class="storyEnd">𓏈</p>
+      </div>
 
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#shaky-hands"><img class="link" src="./graphics/icons/link.png"></a>
