add a new story

--- a/writing.html
+++ b/writing.html
@@ -72,6 +72,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
           <li category="creative"><a href="#when-different-isnt-so">When Different Isn't So - August 27, 2017</a></li>
           <li category="creative"><a href="#shaky-hands">Shaky Hands - August 28, 2017</a></li>
           <li category="creative"><a href="#its-a-job">It's a Job - August 29, 2017</a></li>
+          <li category="creative"><a href="#dread">Dread - September 10, 2017</a></li>
         </ul>
       </div>
 
@@ -91,6 +92,40 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
         <p class="storyEnd">𓏈</p>
       </div>
       -->
+
+      <div class="titleWrapper" category="creative">
+        <a class="imgLink" href="#dread"><img class="link" src="./graphics/icons/link.png"></a>
+        <p class="title" id="dread">Dread</p>
+        <a href="/writing" class="linkBack">top&nbsp;^</a>
+      </div>
+
+      <div class="article">
+        <p>
+          I know this feeling all too well. Dread. I can count on one hand the number of times it’s struck me, but each of those affected me so greatly. They’re burned into my memory, as vivid as the day it happened. With little effort, I can bring that feeling back. I see the rooms I was in, the clothes I was wearing. I see the faces of those who were around me, hear their voices. And in the pit of my stomach, up through my throat and piercing straight through my skull where it leaves my mind throbbing, I bring back those emotions. At first it was scary, then unpleasant. Now it’s just a part of who I am. So mundane, so unextraordinary.
+        </p>
+
+        <p>
+          The leaves were especially green today, which was weird since the tree trunks seemed somehow lackluster. A bit gray. The last time I saw the world this way, I was running for my life from an imagined man. A hallucination. I was afraid I would die, my heart was racing, but all I could notice was how strange the forest around me looked. And as I slowed and marveled and forgot about where I was and why I was there, I noticed something. I wasn’t really afraid to die. In fact, I wouldn’t much mind it. The man was a no-show. Perhaps the thrill of the hunt wears off when your prey refuses to show you fear. Where’s the fun in murder if the guy you’re killing wants to die?
+        </p>
+
+        <p>
+          Yesterday was fairly average. I didn’t really feel up to anything. I got a call from one of my creditors, the third this week. It woke me up. I feel so tired lately. Well I have nearly my whole life, but generally it was broken up with bouts of energy. A week or two feeling like the world could collapse around me and I wouldn’t be bothered to wake up and run. A sad state of nothingness, completely idle and only experiencing what the world forces onto me. And then just like that, I’m back to normal. No, not quite normal. Full of energy, but still just as apathetic. Living truly in the moment. I get the urge to smash a window? It happens before I realize what I’m doing. And suddenly I’m far away and out of breath. I guess I was running from whoever owned that poor window. Oh well, back to my walk. But not in the past few months. It’s just been a slump. And here I am, lying in bed feeling sorry for myself when suddenly there’s this piercing ring, and a bodiless, robotic voice on the answering machine. Call back at your earliest convenience. As if that’s going to happen. I should just unplug the phone, I don’t use it anyway.
+        </p>
+
+        <p>
+          Have you ever wondered how you’d face your own death? I’m sure it depends on the circumstance. Say you’ve been ill for weeks and you know you only have days, or hours left. Then suddenly you get this feeling. You know it’s time. What do you do? Can you really know that? How you’d feel, what you’d say. If those you love weren’t around, would you cry? Would you cry if they were? I’ve wondered that since I was a young child. I always figured, I’d be ok with it. A little disappointed, but I would accept death as inevitable. I was going to have to go eventually, might as well be now. Well some years have passed, and I’ve since found out the answer. See, I’ve been at death’s door. I’ve known I was dying, for a fact. I’ve felt that feeling. At first it’s subtle. You try and push it down, but it’s no use. It comes up stronger and stronger, until you hear a little voice in your head, and it tells you what’s going on. You don’t want to hear it, but you do. And then you know you’ve only got a minute, maybe less. And you know how I felt? I was afraid. I had dreamed of death as a sweet release for years at that point, but I was wrong. Incredible fear, and dread. Every nerve in my body was trying to get me as far away from my current situation as possible. I just wanted to bolt, even knowing it wouldn’t do anything. I was looking around the room, trying to find a way out. Trying to see where death was coming from, maybe I could hide. I would do anything to live at that point. And then it passed, and I went back to wishing I was dead.
+        </p>
+
+        <p>
+          I’ve been anxious my whole life. Not about anything in particular, I would just feel anxiety. When I was very young, I would turn to my mother for comfort. I’d tell her I was afraid, and she would get worried. She’d ask what was wrong, and I’d tell her the truth. I don’t know. I’m just afraid. I learned very quickly that wasn’t good enough. She’d yell at me, frustrated. What do you mean? How can you not know? What are you hiding from me? Is this just for attention? That made it so much worse. I couldn’t bear it. I would hide behind the couch. But I wasn’t hiding from my mother. All I wanted, more than anything in the world, was for her to find me. And understand. And she would see that I’m scared and alone and that I need her. And she’d hold me, and tell me it’s ok. That it didn’t matter what was bothering me, that she was there for me no matter what, and it would get better. But that never happened.
+        </p>
+
+        <p>
+          Sometimes I wonder what’s wrong with me. Nowadays, I don’t wonder so much. I’ve never seen a shrink, or talked at all about what’s going on in my head. But I have these voices, these separate parts of me. And they help me experience the world. There’s the logical me, the emotional me, and the happy me. And all together, we form a pretty normal person. You see, as a kid I never really felt much of anything. Never sad, never happy, never angry. Sort of empty. But I realized that was strange. I never had many friends, all the other kids were just freaked out by me. I was the weird kid who sat alone, who never talked to anyone. Isolated. And I’m sure you know how these things go. I’m alone because people think I’m strange, then they think I’m strange because I’m always alone. Meanwhile I have no one to grow up with, I can’t learn how to be normal, how to read those subtle social cues. I can’t learn how to laugh at a joke, how to smile, how to comfort a sad friend. But I watched, observed from afar. Eventually I was able to reason through being social, but it wasn’t like I was really reasoning through anything. It was all happening in the back of my head. Not subconscious like a normal person, but as a separate being. Happy me. I knew how to make people laugh, make them like me. But I couldn’t really connect with anyone. All my charm was surface level. That’s where emotional me comes in. I don’t really remember either of them joining my mind, but they’re here now. They help me, when they can. Sometimes they take over for me, and I’m just along for the ride. It makes you wonder what’s different about my brain that lets it fit three separate minds. If you ask me, it makes a lot more sense that everyone has these voices, they just aren’t as loud. It seems like less of a stretch, that the difference is in the strength of the other mes, rather than their existence.
+        </p>
+
+        <p class="storyEnd">𓏈</p>
+      </div>
 
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#its-a-job"><img class="link" src="./graphics/icons/link.png"></a>
