--- a/resume.html
+++ b/resume.html
@@ -23,11 +23,11 @@
     <div class="body"><ul>
          <li><p>
              TeachFX, 2017<br>
-             &emsp;Full stack web development, mobile development. Polymer.js, Node.js, MongoDB, React Native.
+             &emsp;Contract work. Full stack web development, mobile development. Polymer.js, Node.js, MongoDB, React Native.
          </li></p>
          <li><p>
           OttoQ, 2017<br>
-          &emsp;Front-end developement, overhauled the UI and UX to modernize the site, sped up load times by 10x. Polymer.js.
+          &emsp;Full-time. Front-end developement, overhauled the UI and UX to modernize the site, sped up load times by 10x. Polymer.js.
         </p></li>
         <li><p>
           A100 Program, Independent Software<br>
@@ -37,25 +37,26 @@
         </p></li>
         <li>
           <p>The Wright Cut, 2016 - 2017<br>
-          &emsp; Front-end design. Wix.
+          &emsp;Contract work. Front-end design. Wix.
         </p></li>
         <li><p>
           IGo Eyewear, 2015 - 2016<br>
-          &emsp; Web designer and SEO. Wix and Wordpress.
+          &emsp;Freelance work. Web designer and SEO. Wix and Wordpress.
         </p></li>
         <li><p>
           Macarra BJJ, 2015 <br>
-          &emsp;Back-end development and front-end design. HTML, CSS, and PHP.
+          &emsp;Freelance work. Back-end development and front-end design. HTML, CSS, and PHP.
         </p></li>
         <li><p>
           SeqHub, 2014 - present<br>
-          &emsp;Cofounder and Lead programmer, heading a team of back-end developers and front-end designers for seq-hub.com. HTML, CSS, JavaScript, and PHP.
+          &emsp;Full-time, part-time. Cofounder and Lead programmer, heading a team of back-end developers and front-end designers for seq-hub.com. HTML, CSS, JavaScript, and PHP.
         </p></li>
         <li><p>CubingWorld, 2014<br>
-          &emsp;Back-end development, implemented a system for browsing and organizing videos. HTML, CSS, and PHP.
+          &emsp;Freelance work. Back-end development, implemented a system for browsing and organizing videos. HTML, CSS, and PHP.
         </p></li>
         <li><p>
-          oppARTunity, 2014<br>&emsp;Back-end developer (PhP), created a program to make mosaics from user-uploaded images for oppartunity.org
+          oppARTunity, 2014<br>
+          &emsp;Freelance work. Back-end developer (PhP), created a program to make mosaics from user-uploaded images for oppartunity.org
         </p></li>
     </ul></div>
 
