add a new story

--- a/writing.html
+++ b/writing.html
@@ -60,6 +60,10 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
           I always really loved writing. Mostly creative fiction, but essays are always pretty relaxing to set down and write. I haven't written since high school, since I figured I didn't have the time. Well I'm gonna make the time. On August 15, 2017, I decided to start writing again. One short story a day, spending about an hour on it. Not worrying about polish or anything, no editing or proofreading. Just pure stream-of-conscious to get back in the habit. I don't know how long I'll keep this up, but I'm committed to 100 days in a row. If I miss one, the count resets. Should be fun!
         </p>
 
+        <p>
+          Edit: Well it turns out 100 days in a row wasn't a very realistic goal. I'm fine with admitting over-ambition. I'll still post stories here as I write them, but for now I won't worry about a schedule. Maybe one day I'll pick up the challenge again to redeem my honor.
+        </p>
+
         <h2>Contents</h2>
         <ul class="contents">
           <li category="creative"><a href="#captain">Captain - August 15, 2017</a></li>
@@ -92,6 +96,52 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
         <p class="storyEnd">𓏈</p>
       </div>
       -->
+
+      <div class="titleWrapper" category="creative">
+        <a class="imgLink" href="#donny-felt-hurt"><img class="link" src="./graphics/icons/link.png"></a>
+        <p class="title" id="donny-felt-hurt">Donny Felt Hurt</p>
+        <a href="/writing" class="linkBack">top&nbsp;^</a>
+      </div>
+
+      <div class="article">
+        <p>
+          “Have ya seen the news article about those scientists in Sweden who put a sheep’s brain in a monkey’s body?” Dozens of questions sprung up in Donny’s mind, but he knew his friend wouldn’t be able to answer them. All he knew on the subject, he had learned from some sensationalized daytime news broadcast. The anchors probably said something about the philosophical implications of the procedure, but without getting into any real depth. Enough to let the masses feel like they had a grasp on the subject, but not so much they would need to hire a decent writer. “Somehow the sheep brain knew how to use its monkey body. Isn’t that unbelievable? It makes you wonder how much of what we do is really in our control.” Donny thought that his friend’s story probably didn’t hold much water, but he played along regardless. It was fun to pretend he was falling for it, to finally be interested in something for once. Donny smiled and nodded and asked simple follow-up questions with obvious answers, being sure not to force his friend to come up with his own opinions. That might scare him away. “You know I bet one day those scientists are gonna put a sheep’s brain in a person’s body. Do ya think the sheep-person would have rights?” Donny said he didn’t know and that was true. Someone else may have followed that up with theories. Then they’d go back and forth with Donny about what made sense and what didn’t, and maybe they’d come to some sort of reasonable conclusion. But this friend wouldn’t be interested in that. “Yeah, me neither. It’s kinda scary how smart some people are.”
+        </p>
+
+        <p>
+          Donny went for a walk that night to clear his mind. He really enjoyed the dark and quiet of an evening in the suburbs. It was past the children’s bedtimes and most of the parents were already passed out drunk. Donny felt isolated. The streetlights were on as always, but their soft twinkle was a welcome substitute for the stars. These days it was hard to see more than a handful on a given night. Donny thought that was a shame. He remembered when he was younger and learning about the ancient Greeks in school. “To the Greeks, the night sky was like a storybook. Each star had its own history”. Donny always thought the night sky was nothing special. He would look up at night and see a few pitiful speckles hidden in the dark gray expanse. “How on earth is that a story book”, he would ask. “There isn’t anything there.”
+        </p>
+
+        <p>
+          Donny usually walked until he was tired and then hated himself for it on the walk back. Tonight would be different, he thought. Then he thought there was no good reason for that, and kept walking until he was tired. On the walk back, he hated himself for it. Donny woke up to a soreness in his legs. “I guess that walk was longer than I thought”. Donny got up and made himself some breakfast. As he did he wondered when the last time he went grocery shopping was. It must have been at least a couple of weeks. Donny was out of milk, so he had his cereal with water. He thought the whole situation was a little sad.
+        </p>
+
+        <p>
+          Donny worked in an office doing something he didn’t care about with people he couldn’t stand. It wasn’t so bad, though. Everyone has to do something, otherwise they can’t afford milk for their cereal. As Donny sat at his chair and wrote some kind of report for one of his bosses, he started thinking about how different his life was when he was a little kid. He used to worry about his future a lot and that always stopped him from enjoying the moment. Donny smiled at the irony of the situation. Then he stopped smiling because he realized the joke was at his expense. Then he smiled again because he didn’t care. It was nice to feel above someone else, he thought, even if that other person is you.
+        </p>
+
+        <p>
+          Donny worked through lunch because he had nothing better to do. He then left work an hour early because he couldn’t stand being there another minute. On his way out, the smelly guy who sat a few feet away from him stopped Donny for a chat. “Hey did ya see the email that Bill sent out to the office? I think he forwarded it to everyone.” Donny never read any emails from his coworkers, but he nodded and said it was hilarious. “Yeah I don’t think it was a joke.” Donny didn’t really care so he just said “Well it was funny anyway”, and then left.
+        </p>
+
+        <p>
+          Donny walked to the park trying to find something to do. It was pretty empty since most people were still at work. This happened to Donny a lot. He knew he didn’t want to be working, but he also didn’t want to do anything else. It was kind of sad being so empty. He almost wanted to cry. As Donny walked through the park, he tried playing little games in his head to pass the time. Imaginary conversations with fake people explained the secret history of the Pleasanton City Park. It used to be a forest, before the settlers arrived, and a haunted one at that. Adventurers would go in to free the trapped souls, but no one would ever return. It gave Donny the chills. Before he knew it, Donny reached the other end of the park and decided without thinking to just double back. Eventually night fell and Donny was still lost in his imagination. People were pointing and talking about him, but Donny didn’t even notice. “That guy has just been walking back and forth for like an hour, I wonder if he’s ok.” “It’s probably best not to get involved”
+        </p>
+
+        <p>
+          The next day, Donny realized he had still forgotten to get milk. He felt like he could get used to cereal and water, though.
+        </p>
+
+        <p>
+          At work people were treating Donny a little strangely. They shot him disapproving looks and stopped their conversations when he got close by. Donny never talked to them anyway, so he didn’t care much. But he thought it was odd. On a whim, Donny checked that email the smelly guy was talking about. It was an invitation to Bill’s pet dog’s funeral. “Well that explains it”, thought Donny. That day Donny had a meeting with HR about his callous behavior. He asked if it really mattered how he treated his coworkers as long as he got his work done. “You don’t have to all be friends, but try to at least get along.” Donny didn’t think he was going to get anywhere in this conversation, so he promised to be more considerate and left.
+        </p>
+
+        <p>
+          “It turns out that whole sheep brain thing was a big hoax.” Part of Donny wished it had been true “Looks like the whole world just got played for a sucker.” Donny didn’t know why he hung out with this guy. He didn’t like him all that much. “You know what”, said Donny, “I don’t like you. I’m just going to stop talking to you now.” Donny's friend thought that was a harsh reaction, but everyone deals with being made a fool of differently.
+        </p>
+
+        <p class="storyEnd">𓏈</p>
+      </div>
 
       <div class="titleWrapper" category="creative">
         <a class="imgLink" href="#dread"><img class="link" src="./graphics/icons/link.png"></a>
