--- a/writing.html
+++ b/writing.html
@@ -77,6 +77,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
           <li category="creative"><a href="#shaky-hands">Shaky Hands - August 28, 2017</a></li>
           <li category="creative"><a href="#its-a-job">It's a Job - August 29, 2017</a></li>
           <li category="creative"><a href="#dread">Dread - September 10, 2017</a></li>
+          <li category="creative"><a href="#donny-felt-hurt">Donny Felt Hurt - October 6, 2017</a></li>
         </ul>
       </div>
 
