--- a/resume.html
+++ b/resume.html
@@ -22,6 +22,10 @@
     <hr>
     <div class="body"><ul>
          <li><p>
+             Fincera Inc., 2017-<br>
+             &emsp;Front-end web development, architectured a complete refactor of the app, coordinated with a team in India, including moving there for a month. Angular, Node.js.
+         </li></p>
+         <li><p>
              TeachFX, 2017<br>
              &emsp;Contract work. Full stack web development, mobile development. Polymer.js, Node.js, MongoDB, React Native.
          </li></p>
