--- a/writing.html
+++ b/writing.html
@@ -52,17 +52,17 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
   <img class="banner" src="graphics/sf_skyline.png">
   <div class="page">
     <div class="">
-      <p class="return"><a href="/home">&lt; Exit</a></p>
+      <p class="return"><a href="/home">&lt; Back</a></p>
 
-      <p class="title">1 Hour a Day</p>
+      <!-- <p class="title">1 Hour a Day</p> -->
       <div class="article">
-        <p>
+        <!-- <p>
           I always really loved writing. Mostly creative fiction, but essays are always pretty relaxing to set down and write. I haven't written since high school, since I figured I didn't have the time. Well I'm gonna make the time. On August 15, 2017, I decided to start writing again. One short story a day, spending about an hour on it. Not worrying about polish or anything, no editing or proofreading. Just pure stream-of-conscious to get back in the habit. I don't know how long I'll keep this up, but I'm committed to 100 days in a row. If I miss one, the count resets. Should be fun!
         </p>
 
         <p>
           Edit: Well it turns out 100 days in a row wasn't a very realistic goal. I'm fine with admitting over-ambition. I'll still post stories here as I write them, but for now I won't worry about a schedule. Maybe one day I'll pick up the challenge again to redeem my honor.
-        </p>
+        </p> -->
 
         <h2>Contents</h2>
         <ul class="contents">
