--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
     <div id="contact"><p id="hid"></p></div>
     <div class="midAlign"><hr class="midHR"></div><br>
 
-    <div class="body"><p>4+ years of experience programming in many languages both professionally and as a hobby. Expert in UI/UX design. Comfortable working with a team, both as a member and a leader.</p></div><br>
+    <div class="body"><p>5+ years of experience programming in many languages both professionally and as a hobby. Expert in UI/UX design. Comfortable working with a team, both as a member and a leader.</p></div><br>
 
     <div class="title"><p>Experience</p></div>
     <hr>
@@ -72,7 +72,7 @@
             <li><p>Proficient in C++, Python, JavaScript (3-5+ years)</p></li>
             <li><p>Proficient Polymer.js, Node.js (3 years)</p></li>
             <li><p>Experienced with openGL and SDL (2 years)</p></li>
-            <li><p>Experienced with ReactJS, Angular, Meteor (1 year)</p></li>
+            <li><p>Experienced with ReactJS, Angular, Meteor (2 years)</p></li>
             <li><p>Familiar with C, Java, Scheme, C# (1-3 years)</p></li>
             <li><p>Familiar with Unity and Multimedia Fusion 2 game engines</p></li>
             <li><p>Some experience with MIPS assembly language</p></li>
