--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
     <hr>
     <div class="body"><ul>
          <li><p>
-             Finxera Inc., 2017-<br>
+             Finxera Inc., 2017 - present<br>
              &emsp;Front-end web development, architectured a complete refactor of the app, coordinated with a team in India, including moving there for a month. Angular, Node.js.
          </li></p>
          <li><p>
