--- a/santa.html
+++ b/santa.html
@@ -33,6 +33,7 @@
       <button onclick="handleClick('Ajmal')">Ajmal</button>
       <button onclick="handleClick('Mama')">Mama</button>
       <button onclick="handleClick('Ddogg')">Ddogg</button>
+      <button onclick="handleClick('Stefanie')">Stefanie</button>
     </div>
 
     <p id="you-get">???</p>
