fix duplicate declaration

--- a/santa.html
+++ b/santa.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="./js/santa.js"></script>
 
     <script>
-      const results = santa(200);
+      // const results = santa(200);
       const results = santa(420);
       function handleClick (name) {
         let text = document.getElementById('you-get');
@@ -35,7 +35,7 @@
       <button onclick="handleClick('Noah')">Noah</button>
       <button onclick="handleClick('Tyler')">Tyler</button>
       <button onclick="handleClick('Winslorp')">Winslorp</button>
-      <!--
+    <!--
       <button onclick="handleClick('Tyler')">Tyler</button>
       <button onclick="handleClick('Kyle')">Kyle</button>
       <button onclick="handleClick('Allie')">Allie</button>
