--- a/santa.html
+++ b/santa.html
@@ -17,7 +17,7 @@
 
     <script>
       // const results = santa(200);
-      const results = santa(420);
+      const results = santa(42011);
       function handleClick (name) {
         let text = document.getElementById('you-get');
         text.innerHTML = results[name];
@@ -30,7 +30,7 @@
     <div class="buttons">
       <button onclick="handleClick('Austin')">Austin</button>
       <button onclick="handleClick('Cathy')">Cathy</button>
-      <button onclick="handleClick('Chase')">Chase</button>
+      <button onclick="handleClick('Chasé')">Chasé</button>
       <button onclick="handleClick('Corn')">Corn</button>
       <button onclick="handleClick('Noah')">Noah</button>
       <button onclick="handleClick('Tyler')">Tyler</button>
