--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
     <head>
         <meta charset = "utf-8">
-        <script>window.location = "http://tylerleite.github.io/home"</script>
+        <script>window.location = "http://cooltyler.fun"</script>
     </head>
 </html>
